# mkepub

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  mkepub.py  pyproject.toml  setup.cfg  setup.py  test_mkepub.py
.github/workflows/: ci.yml  run_tests.yml
mkepub/: __init__.py  epub.py  mkepub.py
mkepub/resources/: container.xml  content.opf  page.xhtml
mkepub/templates/: container.xml  cover.xhtml  package.opf  toc.ncx  toc.xhtml
mkepub/tests/: stylesheet.css  test_mkepub.py
templates/: package.opf  page.xhtml  toc.xhtml
