[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mkepub"
version = "1.2.1"
description = "Simple minimalistic library for creating EPUB3 files"
readme = "README.md"
authors = [ {name = "anqxyr", email = "anqxyr@gmail.com"},]
license = ["MIT"]
license-files = ["LICENSE"]
keywords = ["epub", "books"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "epubcheck>=5.1.0",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/anqxyr/mkepub"